Fix overlapping of labels

--- a/packages/perspective-viewer-d3fc/src/less/chart.less
+++ b/packages/perspective-viewer-d3fc/src/less/chart.less
@@ -298,6 +298,10 @@
         filter: grayscale(100%);
     }
 
+    .y-axis{
+        width: 5em !important;
+    }
+
     #dragHandles {
         position: absolute;
         top: 0px;
